--- a/app/views/posts/wall_read.html.erb
+++ b/app/views/posts/wall_read.html.erb
@@ -1,3 +1,11 @@
+
+<%= form_for @post do |form| %>
+  <%= form.label :message %>
+  <%= form.text_area :message %>
+
+  <%= form.submit "Submit" %>
+<% end %>
+
 <% @posts.each do |post| %>
   <ul>
   <b><p><li><%= @username %></li></p></b>
