--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,16 +7,24 @@
 
 
 <% @posts.each do |post| %>
-<div>
-        <p><%= @username %></p>
-        <p><%= post.created_at %></p>
-    <div id="post_<%=post.id%>" data-name="custom-text">
-       <div id="post_text_<%=post.id%>"><%= simple_format(post.message) %></div>
-       <% if (@user.id = post.user_id) %>
-       <button type="button" id="post_edit_<%=post.id%>" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Edit</button>
-       <% end %>
-    </div>
 
+<div class="media">
+  <div class="media-left">
+    <a href="#">
+      <img class="media-object" src="<%= post.gravatar %>" alt="">
+    </a>
+  </div>
+  <div class="media-body">
+    <h5 class="mt-0"><%= @username %></h5>
+              <p><%= post.created_at %></p>
+              <div id="post_<%=post.id%>" data-name="custom-text">
+                <div id="post_text_<%=post.id%>"><%= simple_format(post.message) %></div>
+                 <p> <% if (@user.id = post.user_id) %>
+                 <button type="button" id="post_edit_<%=post.id%>" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Edit</button>
+                 <% end %>
+                 </p>
+  </div>
+</div>
 </div>
 <% end %>
 
