--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,17 +5,18 @@
   <%= form.submit "Submit" %>
 <% end %>
 
-
-<% @posts.each do |post| %>
-  <div id="post_<%=post.id%>" data-name="custom-text">
-    <p><%= post.user.username %></p>
-    <p><%= post.created_at %></p>
-    <div id="post_text_<%=post.id%>"><%= simple_format(post.message) %></div>
-    <% if (@user.id == post.user_id) %>
-      <button type="button" id="post_edit_<%=post.id%>" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Edit</button>
-    <% end %>
-  </div>
-<% end %>
+<div id="posts-feed">
+  <% @posts.each do |post| %>
+    <div id="post_<%=post.id%>" class='post' data-name="custom-text">
+      <p><%= post.user.username %></p>
+      <p><%= post.created_at %></p>
+      <div id="post_text_<%=post.id%>"><%= simple_format(post.message) %></div>
+      <% if (@user.id == post.user_id) %>
+        <button type="button" id="post_edit_<%=post.id%>" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Edit</button>
+      <% end %>
+    </div>
+  <% end %>
+</div>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
