--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -1,3 +1,19 @@
+/* new post form */
+#new-post {
+  display: flex;
+  flex-direction: column;
+  margin: 5vh 5vw;
+}
+
+textarea {
+   padding: 1vh 1vw;
+   width: 80vw;
+ }
+
+#new_post input[type="submit"] {
+  margin: 0;
+}
+
 #posts-feed {
   display: flex;
   flex-direction: column;
