--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,9 +9,9 @@
 <div id="posts-feed">
   <% @posts.each do |post| %>
     <div id="post_<%=post.id%>" class='post' data-name="custom-text">
-      <p><%= post.user.username %></p>
-      <p><%= post.created_at %></p>
-      <div id="post_text_<%=post.id%>"><%= simple_format(post.message) %></div>
+      <h4 class="post_username"><%= post.user.username %></h4>
+      <p class="post_datetime"><%= post.created_at.strftime("%e %b %Y at %H:%M  ") %></p>
+      <div id="post_text_<%=post.id%>" class="post_text"><%= simple_format(post.message) %></div>
       <% if (@user.id == post.user_id) %>
         <button type="button" id="post_edit_<%=post.id%>" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Edit</button>
       <% end %>
