--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,8 @@
 <%= form_for [@user,@post] do |form| %>
   <%= form.label :message %>
   <%= form.text_area :message %>
-
+  <%= form.submit "Submit" %>
+<% end %>
 
 <div id="posts-feed">
   <% @posts.each do |post| %>
