--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,20 @@
-<%= @user.id %>
+<%= form_for @post do |form| %>
+  <%= form.label :message %>
+  <%= form.text_area :message %>
+<%= form.hidden_field :wall_id, :value => @user.id %>
+  <%= form.submit "Submit" %>
+<% end %>
+
+
+
+ <h1> users own wall </h1>
+
+<% @wall_posts.each do |post| %>
+  <ul>
+  <b><p><li><%= @username %></li></p></b>
+      <p><%= simple_format(post.message) %></p>
+      <p><%= post.created_at %></p>
+      <p></p>
+      <br>
+  </ul>
+<% end %>
