--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,6 +70,18 @@
  font-weight: bold;
 }
 
+#signup-box {
+  position: relative;
+  margin: 5% auto;
+  background: #FFF;
+  border-radius: 2px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  box-sizing: border-box;
+  padding: 20px;
+  width: 286px;
+  height: 430px;
+}
+
 #login-box {
   position: relative;
   margin: 5% auto;
@@ -79,7 +91,7 @@
   box-sizing: border-box;
   padding: 20px;
   width: 286px;
-  height: 400px;
+  height: 350px;
 }
 
 input[type="text"],
