--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <%= render "devise/shared/error_messages", resource: resource %>
 
-<div id="login-box">
+<div id="signup-box">
   <h2 id="signup-title">Create a new account</h2>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
