--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,17 +24,10 @@
           Logged in as <strong><%= current_user.email %></strong>.
           <%= link_to 'Edit profile', edit_user_registration_path %>
           <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-          <%# <%= link_to "Posts", post_path(:id) %> %>
         <% else %>
           <%= link_to "Sign up", new_user_registration_path%>
           <%= link_to "Login", new_user_session_path  %>
         <% end %>
-
-        <!-- <a class="active" href='/users/sign_up'>Sign up</a>
-        <a class="active" href='/users/sign_in'>Log in</a> -->
-<!--
-        <a href="#post">Post</a>
-      <a href="#friends">Friends</a> -->
       </div>
 
 
@@ -46,6 +39,12 @@
       <p class="alert alert-danger"><%= alert %></p>
     <% end %>
     <div id="modal-holder"></div>
+    <!-- Flash message -->
+    <div id="flash">
+      <% flash.each do |key, value| -%>
+      <div id="flash_<%= key %>"><%=h value %></div>
+      <% end %>
+    </div>
 
     <%= yield %>
 
