--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
 <% @users.each do |user| %>
-  <p>User <%= user.id %>: <%= user.username %></p>
+  <div>
+    <a href="/users/<%= user.id %>">User <%= user.id %>: <%= user.username %></a>
+  </div>
 <% end %>
