--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,12 +11,10 @@
     <p><%= post.user.username %></p>
     <p><%= post.created_at %></p>
     <div id="post_text_<%=post.id%>"><%= simple_format(post.message) %></div>
-    <% if (Time.now.to_i/60)- post.created_at.to_i/60 <= 10 %>
-      <% if post.user_id != @user.id %>
-      <button type="button"  class="error_message">You are not my owner</button>
-      <% else %>
+    <button type="button" id="post_delete_<%=post.id%>" class="btn btn-info btn-sm">Delete</button>
+    <% if (@user.id == post.user_id) %>
       <button type="button" id="post_edit_<%=post.id%>" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Edit</button>
-      <% end %>
+
     <% end %>
   </div>
 <% end %>
