--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -39,6 +39,11 @@ textarea {
  background-color: #4CAF50;
 }
 
+.btn.error_message {
+  background-color: #d9d9d9;
+  color: #999999;
+}
+
 .btn:hover {
    background-color: #008000;
  }
