--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
     <p><%= post.user.username %></p>
     <p><%= post.created_at %></p>
     <div id="post_text_<%=post.id%>"><%= simple_format(post.message) %></div>
-    <button type="button" id="post_delete_<%=post.id%>" class="btn btn-info btn-sm">Delete</button>
+    <%= button_to "Delete", :method => :destroy, params: {post: post, id: post.id} %>
     <% if (@user.id == post.user_id) %>
       <button type="button" id="post_edit_<%=post.id%>" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Edit</button>
 
