--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
   <div id="post_<%=post.id%>" data-name="custom-text">
     <p  hidden id="post_user_<%=post.id%>"><%= post.user.id %></p>
     <p><%= post.user.username %></p>
-    <p><%= post.created_at %></p>
+    <p id="<%=post.id%>_created_at"><%= post.created_at %></p>
     <div id="post_text_<%=post.id%>"><%= simple_format(post.message) %></div>
       <button type="button" id="post_edit_<%=post.id%>" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Edit</button>
   </div>
