--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,9 @@
             <%= link_to "All users", users_path %>
           </p>
           <p id="current_user" class="nav_item">
-            Logged in as <strong><%= current_user.username %></strong>
+            <!-- Logged in as <st><%= current_user.username %></strong> -->
+              <a href="/users/<%= current_user.id %>">Logged in as <%= current_user.username %></a>
+
           </p>
           <p class="nav_item">
             <%= link_to "Logout", destroy_user_session_path, method: :delete %>
